--- a/CATopalian_JavaScript_True_AI_16_Gates.html
+++ b/CATopalian_JavaScript_True_AI_16_Gates.html
@@ -4,13 +4,16 @@
 <!-- https://github.com/ChristopherAndrewTopalian -->
 <!-- CATopalian_JavaScript_True_AI_16_Gates.html -->
 
-<html>
+<!DOCTYPE html>
+<html lang = 'en'>
 <head>
 <title> CATopalian JavaScript True AI 16 Gates </title>
 
 <meta charset = 'UTF-8'>
 
 <meta name = 'viewport' content = 'width = device-width, initial-scale = 1.0'>
+
+<link rel = "icon" href = "src/media/textures/icons/CATopalian_True_AI_Centered.png" type = "image/png">
 
 <link rel = 'stylesheet' href = 'src/css/style001.css'>
 
@@ -67,6 +70,8 @@
 <script src = 'src/js/make/makeInputVariables.js'></script>
 
 <script src = 'src/js/random/randomInputs.js'></script>
+
+<script src = 'src/js/sound/sound.js'></script>
 
 <script src = 'src/js/sound/dataSounds.js'></script>
 
